--- a/src/components/data-table/data-table.scss
+++ b/src/components/data-table/data-table.scss
@@ -1,4 +1,42 @@
 .data-table{
-  height: 600px;
+  height: 640px;
   padding: 20px;
+
+  .datacell-img {
+    display: flex;
+    align-items: center;
+
+    .data-img {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-right: 10px;
+    }
+  }
+
+  .cell-status {
+    padding: 7px 20px;
+    border-radius: 5px;
+    text-align: center;
+
+    &.active {
+      background-color: rgba(0, 128, 0, 0.05);
+      color: green;
+    }
+    &.pending {
+      background-color: rgba(255, 217, 0, 0.05);
+      color: goldenrod;
+    }
+    &.passive {
+      background-color: rgba(255, 0, 0, 0.05);
+      color: crimson;
+    }
+  }
+
+  .action-cell {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
 }
