--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,9 @@
 .home-main {
   display: flex;
 
-  .homeContainer {
+  .home-container {
     flex: 6;
+    margin-left: 230px;
   }
 
   .widgets-container {
