fixed sidebar temporary design

--- a/src/mode/darkMode.scss
+++ b/src/mode/darkMode.scss
@@ -34,8 +34,11 @@
         color: #999;
       }
     }
-    hr {
-      border-color: #333;
+
+    .sidebar-header{
+        .header-name{
+          color: #999;
+        }
     }
 
     ul{
