--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -10,7 +10,7 @@
   overflow-x: hidden;
 
   .sidebar-top {
-    height: 50px;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,9 +22,34 @@
     }
   }
 
-  hr {
-    height: 0;
-    border: 0.5px solid rgb(230, 227, 227);
+  .sidebar-header{
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+
+    .header-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      width: calc(100% - 20px);
+      height: 50px;
+      margin: 10px;
+      padding: 10px;
+      border-radius: 12px;
+      background-color: rgba(145, 158, 171, 0.12);
+
+      .sidebar-avatar {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+      }
+
+      .header-name {
+        color: black;
+      }
+    }
   }
 
   .sidebar-center {
@@ -77,24 +102,19 @@
   }
 
   .sidebar-bottom {
+    height: 80px;
+    width: 100%;
     display: flex;
     align-items: center;
-    margin: 10px;
-
-    .colorOption {
-      height: 20px;
-      width: 20px;
-      border-radius: 5px;
-      border: 1px solid #7451f8;
-      cursor: pointer;
-      margin: 5px;
-
-      &:nth-child(1) {
-        background-color: whitesmoke;
-      }
-      &:nth-child(2) {
-        background-color: #333;
-      }
+    justify-content: center;
+    
+    .time-container {
+      text-align: center;
+      font-size: 28px;
+      font-weight: bold;
+      color: gray;
+      letter-spacing: 2px;
     }
   }
+
 }
