adding evaluator and fixed builds

--- a/src/components/data-table/data-table.scss
+++ b/src/components/data-table/data-table.scss
@@ -1,6 +1,8 @@
 .data-table{
+  width: calc(100% - 100px);
   height: 640px;
   padding: 20px;
+  margin: auto;
 
   .datacell-img {
     display: flex;
