--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -6,5 +6,14 @@
 
   .list-wrapper {
     flex: 6;
+
+    .list-header{
+      width: 50%;
+      margin: 20px 0px 0px 55px;
+      .list-title {
+        font-weight: 600;
+        font-size: 26px;
+      }
+    }
   }
 }
