--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: calc(100% - 230px);
   margin-left: 230px;
-  height: 100vh;
+  height: 100%;
 
   .list-wrapper {
     flex: 6;
