--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -107,6 +107,7 @@
           &.active{
             font-weight: 500;
             color: rgb(137, 61, 255);
+            background: black;
           }
         }
       }
@@ -124,9 +125,8 @@
     .time-container {
       text-align: center;
       font-size: 34px;
-      font-weight: bold;
+      font-weight: 500;
       color: gray;
-      letter-spacing: 1px;
     
       .greetings{
         width: 100%;
