--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Martel:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;400&display=swap');
+
 .single-main {
   margin: 10px 20px;
 
@@ -10,6 +13,7 @@
       display: flex;
       align-items: flex-start;
       flex-wrap: wrap;
+      margin-left: 20px;
 
       .left-header {
         display: flex;
@@ -54,7 +58,8 @@
             height: 50px;
 
             .report-title {
-              font-weight: 500;
+              font-family: 'Martel', sans-serif;
+              font-weight: bold;
               font-size: 25px;
             }
           }
@@ -66,8 +71,12 @@
             align-items: center;
 
             .report-content {
+              font-family: 'Karla', sans-serif;
+              font-size: 18px;
               margin-right: 30px;
               text-align: justify;
+              line-height: 1.7;
+              letter-spacing: 1px;
             }
           }
           //right body footer here
@@ -186,6 +195,17 @@
         display: flex;
         width: 100%;
         flex-wrap: wrap;
+
+        span {
+          font-weight: 500;
+        }
+
+        .evaluator { 
+          font-size: 16px;
+          font-weight: 300;
+          margin-right: 10px;
+          padding: 3px 5px 10px;
+        }
 
         .created-date {
           font-size: 16px;
