--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Martel:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
 
 .single-main {
   margin: 10px 20px;
@@ -71,14 +71,41 @@
             align-items: center;
 
             .report-content {
-              font-family: 'Karla', sans-serif;
-              font-size: 18px;
+              font-family: 'Inter', sans-serif;
+              font-size: 16px;
               margin-right: 30px;
               text-align: justify;
               line-height: 1.7;
               letter-spacing: 1px;
             }
           }
+          //helpful container
+          .helpful-wrapper {
+            width: 92%;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            flex-direction: row;
+            background: #f7f7f7;
+            margin-top: 30px;
+
+            .help-title {
+              font-size: 15px;
+              color: #893dff;
+              padding: 10px 20px;
+            }
+
+            .help-yes, .help-no {
+              cursor: pointer;
+              color: #aa7af0;
+              padding: 5px 20px;
+              align-self: center;
+              justify-self: center;
+              font-weight: bold;
+            }
+          }
+          
           //right body footer here
           .body-footer {
             width: 100%;
@@ -119,7 +146,8 @@
                 height: 100%;
                 display: flex;
                 flex-wrap: wrap;
-                background-color: #d3d3d3;
+                background-color: #f7f7f7;
+                margin-bottom: 20px;
 
                 .content-header {
                   display: flex;
@@ -164,6 +192,26 @@
                     font-weight: 300;
                     font-size: 15px;
                   }
+                }
+              }
+            }
+            // button for comment styling
+            .btn-container {
+              width: 100%;
+
+              .btn-comment{
+                padding: 7px 25px;
+                border-radius: 20px;
+                border: none;
+                outline: none;
+                color: white;
+                background: #893dff;
+                font-size: 15px;
+                cursor: pointer;
+                margin-top: 8px;
+
+                &:hover {
+                  transform: translateY(-10%);
                 }
               }
             }
