fixed multiple components

--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -211,7 +211,8 @@
                 margin-top: 8px;
 
                 &:hover {
-                  transform: translateY(-10%);
+                  background: #aa7af0;
+                  color: #fff;
                 }
               }
             }
