--- a/src/pages/forums/forums.scss
+++ b/src/pages/forums/forums.scss
@@ -43,6 +43,7 @@
           font-weight: 600;
           padding: 10px 0px 5px 20px;
           color: #893dff;
+          cursor: pointer;
         }
 
         span {
