--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -19,6 +19,12 @@
       font-size: 20px;
       font-weight: bold;
       color: #637381;
+      cursor: pointer;
+
+      .img-logo {
+        height: 80px;
+        width: auto;
+      }
     }
   }
 
