--- a/src/components/widgets/widgets.scss
+++ b/src/components/widgets/widgets.scss
@@ -30,6 +30,7 @@
       width: max-content;
       font-size: 12px;
       border-bottom: 1px solid gray;
+      cursor: pointer; 
     }
 
     .percentage {
