added UI for settings

--- a/src/mode/darkMode.scss
+++ b/src/mode/darkMode.scss
@@ -22,6 +22,10 @@
 
     .navbar-search {
       border-color: gray;
+
+      .SearchInputContainer {
+        background-color: red;
+      }
     }
 
     .dropdown {
