--- a/src/components/account-settings/accSettings.scss
+++ b/src/components/account-settings/accSettings.scss
@@ -17,95 +17,150 @@
       color: white;
       text-transform: uppercase;
       letter-spacing: 2px;
-      margin-top: -15px;
+      margin-top: -8px;
     }
   }
   //left content here
   .accSettings-content__wrapper {
     width: 80%;
-    height: 550px;
+    height: 620px;
     margin: -30px auto 0;
+    margin-bottom: 100px;
     display: flex;
-    box-shadow: 0 0 5px 2px #999;
+    box-shadow: 0 0 10px 2px #999;
 
     .accSettings-content__left {
-      width: 250px;
+      width: 100%;
       height: 100%;
       background-color: #fff;
-      border-right: 1px solid lightgrey;
 
       .accSettings-left__displayPic {
         width: 100%;
-        height: 180px;
+        height: 100px;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
-        margin-top: 30px;
+        margin: 30px 0 25px 50px;
 
         .accSettings-left_picture {
-          width: 120px;
-          height: 120px;
+          width: 100px;
+          height: 100px;
           border-radius: 50%;
+          border: 2px solid #fff;
+          margin-right: 20px;
 
           &:hover {
             cursor: pointer;
           }
         }
 
-        .accSettings-left__userName {
-          font-size: 18px;
-          font-weight: 500;
-          margin-top: 20px;
-        }
-      }
-      //sidebar left items
-      .accSettings-left__functions {
-        width: 100%;
-        height: 300px;
-
-        .accSettings-left__item {
+        .header-content {
+          width: 80%;
           display: flex;
+          flex-direction: row;
           align-items: center;
 
-          .left-list {
-            list-style: none;
-            width: 100%;
+          .header-details {
+            width: 500px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
 
-            .list-item {
-              width: 100%;
-              cursor: pointer;
+            .accSettings-left__userName {
+              font-size: 22px;
+              font-weight: 500;
+              margin-top: 20px;
+              margin-bottom: -10px;
+            }
+
+            .sub-heading {
+              font-size: 14px;
+              font-weight: 400;
+              margin-top: 10px;
+            }
+          }
+          .header-buttons {
+            width: 350px;
+            display: flex;
+            flex-direction: row;
+            padding: 20px;
+            justify-content: flex-end;
+
+            .accSettings-left__cancel {
+              outline: none;
+              border: none;
+              background-color: transparent;
+              font-family: 'Poppins';
+              margin-right: 10px;
 
               &:hover {
-                background-color: beige;
-                color: #893dff;
-              }
-              &.active {
-                color: #893dff;
+                cursor: pointer;
+                color: crimson;
+                font-weight: 500;
               }
             }
-            .left-list__item {
-              margin: 20px 30px;
-              font-size: 16px;
-              font-weight: 400;
-              padding: 10px;
+
+            .accSettings-left__update {
+              outline: none;
+              border: none;
+              background-color: #893dff;
+              color: white;
+              padding: 7px 18px;
+              border-radius: 10px;
 
               &:hover {
-                font-weight: 600;
+                cursor: pointer;
+                background-color: #6f1dff;
+                font-weight: 500;
               }
             }
           }
         }
       }
-    }
-    //right content here
-    .accSettings-content__right {
-      width: 833px;
-      background-color: #fff;
-
-      .accSettings-right__contents {
+      //items start here
+      .accSettings-left__details {
+        display: flex;
+        flex-direction: column;
         width: 100%;
-        margin: 20px 30px;
+
+        .accSettings-left__details-item {
+          display: flex;
+          width: 100%;
+          padding: 15px 25px;
+          margin: 10px 40px;
+
+          .accSettings-left__details-item-wrapper {
+            display: flex;
+            align-items: center;
+            width: 200px;
+
+            .details-item__title {
+              font-size: 14px;
+              font-weight: 400;
+            }
+          }
+
+          .accSettings-left__input-item-wrapper {
+            width: 700px;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
+
+            &.input-email {
+              margin-left: -138px;
+            }
+            &.input-pass{
+              margin-left: -25px;
+            }
+          }
+        }
+        .content-divider {
+          display: flex;
+          width: 80%;
+          margin: auto;
+          height: 1px;
+          background-color: #999;
+        }
       }
     }
   }
