--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -272,6 +272,7 @@
         }
 
         .info-tags {
+          width: 100%;
           display: flex;
           align-items: center;
           margin-top: 10px;
@@ -299,6 +300,32 @@
                 font-weight: 300;
                 font-size: 14px;
               }
+            }
+          }
+        }
+        
+        .case-status {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-top: 10px;
+          flex-wrap: wrap;
+          .case-title{
+            font-size: 16px;
+            font-weight: 400;
+            padding-left: 10px;
+            align-self: flex-start;
+          }
+
+          .case-content {
+            width: 100%;
+            
+            .case-option {
+              width: 40%;
+              margin-left: 10px;
+              margin-top: 10px;
+              padding: 5px 10px;
             }
           }
         }
