added eval reg form modal

--- a/src/components/evaluator-cards/evaluator-card.scss
+++ b/src/components/evaluator-cards/evaluator-card.scss
@@ -6,10 +6,10 @@
   margin: 20px;
   -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
   box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.47);
+  z-index: -1;
 
   .card-header {
     width: 100%;
-    position: relative;
     background: purple;
     width: 350px;
     height: 80px;
