--- a/src/components/navbar/dropdownMenu/notif-dropdown/notifs.scss
+++ b/src/components/navbar/dropdownMenu/notif-dropdown/notifs.scss
@@ -4,7 +4,6 @@
   top: 50px;
   right: -10px;
   background-color: #fff;
-  z-index: 999;
 
   .notifs-container {
     width: 100%;
@@ -14,7 +13,6 @@
     overflow-x: hidden;
     border-radius: 7px;
     box-shadow: 0 0 10px 2px rgba(153, 153, 153, 0.4);
-    z-index: 99;
 
     &::-webkit-scrollbar {
       width: 10px;
@@ -42,6 +40,7 @@
       width: 100%;
       margin: 5px;
       margin-top: 8px;
+      
 
       .header-title {
         font-size: 22px;
@@ -79,6 +78,7 @@
       flex-direction: column;
       align-items: center;
       width: 100%;
+      background-color: #fff;
 
       .notifs-item {
         width: 100%;
