--- a/src/components/reports/ReportTypes/report-type.scss
+++ b/src/components/reports/ReportTypes/report-type.scss
@@ -22,8 +22,9 @@
       border: 0.5px solid #999;
 
       .item-icon {
-        width: 50px;
-        height: 50px;
+        width: 1000px;
+        height: 1000px;
+        font-size: 1000px;
         margin: 10px auto;
         color: #999;
       }
