finalized styling for add post

--- a/src/components/reports/process.scss
+++ b/src/components/reports/process.scss
@@ -166,8 +166,10 @@
         width: 100%;
         display: flex;
         margin: 20px auto;
+        flex-wrap: wrap;
 
         .body-header {
+          width: 100%;
           display: flex;
           align-items: center;
 
@@ -199,6 +201,10 @@
             margin-right: 20px;
             font-family: 'Inter', sans-serif;
           }
+        }
+        .process-review {
+          width: 100%;
+          margin: 20px 40px;
         }
       }
     }
