--- a/src/pages/forums/forums.scss
+++ b/src/pages/forums/forums.scss
@@ -8,13 +8,32 @@
   .forums-container {
     flex: 6;
 
-    .forums-header{
+    .forums-header {
       display: flex;
       margin: 20px;
+
+      .forums-title {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 20px 45px 20px 55px;
+
+        .main-title {
+          font-size: 26px;
+          font-weight: 600;
+        }
+
+        .addPost-btn {
+          background-color: #893dff;
+          text-transform: capitalize;
+          box-shadow: rgb(137 61 255 / 34%) 0px 8px 16px 0px;
+        }
+      }
     }
 
     .grid-main {
-      width: 1300px;
+      width: 90%;
       display: flex;
       flex-shrink: 0;
       align-items: center;
@@ -32,12 +51,13 @@
         padding: 20px;
 
         .report-type {
-          background-color: crimson;
+          background-color: rgba(220, 20, 60, 0.6);
           width: fit-content;
-          padding: 5px 12px;
+          padding: 5px 15px;
           border-radius: 8px;
           color: white;
-          font-size: 10px;
+          font-size: 9px;
+          margin-left: 5px;
         }
 
         .title {
@@ -48,17 +68,17 @@
           cursor: pointer;
         }
 
-        span {
-          font-size: 14px;
+        .sub-title {
+          font-size: 12px;
           font-weight: 400;
           padding-bottom: 5px;
           padding-left: 20px;
           color: #aa7af0;
         }
 
-        p {
+        .report-detail {
           font-family: 'Inter', sans-serif;
-          font-size: 16px;
+          font-size: 15px;
           font-weight: 400;
           line-height: 1.7;
           color: #999;
@@ -81,7 +101,7 @@
           flex-direction: column;
           align-items: center;
           justify-content: center;
-          
+
           p {
             font-weight: 600;
             font-size: 18px;
