--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -79,7 +79,7 @@
           .sidebar-setting,
           .sidebar-evaluator,
           .sidebar-forum,
-          .sidebar-forum,
+          .sidebar-log,
           .sidebar-logout {
             background-color: rgba(137, 61, 255, 0.2);
             border-right: 3px solid rgb(137, 61, 255);
