--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -29,6 +29,7 @@
         }
 
         .header-info {
+          width: 60%;
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -37,6 +38,31 @@
           .header-name {
             font-weight: 500;
             font-size: 20px;
+          }
+        }
+
+        .assign-content {
+          width: 26%;
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          margin-top: 10px;
+          margin-left: 20px;
+
+          .assign-btn {
+            border: none;
+            outline: none;
+            padding: 7px 18px;
+            border-radius: 7px;
+            background-color: rgba(137, 61, 255, 0.8);
+            color: white;
+            cursor: pointer;
+            box-shadow: rgb(137 61 255 / 34%) 0px 8px 16px 0px;
+
+            &:hover {
+              font-weight: 500;
+              background-color: rgba(137, 61, 255, 1);
+            }
           }
         }
       }
@@ -206,6 +232,7 @@
                 outline: none;
                 color: white;
                 background: #893dff;
+                box-shadow: rgb(137 61 255 / 34%) 0px 8px 16px 0px;
                 font-size: 14px;
                 letter-spacing: 0.5px;
                 cursor: pointer;
@@ -305,29 +332,36 @@
         }
         
         .case-status {
-          width: 100%;
+          width: 60%;
           display: flex;
-          flex-direction: column;
+          justify-content: space-between;
           align-items: center;
-          margin-top: 10px;
-          flex-wrap: wrap;
+          margin-top: 15px;
+
           .case-title{
             font-size: 16px;
             font-weight: 400;
             padding-left: 10px;
+            margin-top: 4px;
             align-self: flex-start;
           }
 
-          .case-content {
-            width: 100%;
-            
-            .case-option {
-              width: 40%;
-              margin-left: 10px;
-              margin-top: 10px;
-              padding: 5px 10px;
+          .unresolvable-btn {
+            outline: none;
+            border: none;
+            padding: 7px 12px;
+            border-radius: 5px;
+            background: rgba(220, 20, 60, 0.67);
+            box-shadow: rgb(220 20 60 / 34%) 0px 8px 16px 0px;
+            color: white;
+            cursor: pointer;
+
+            &:hover {
+              font-weight: 500;
+              background: rgba(220, 20, 60, 0.87);
             }
           }
+
         }
       }
     }
