--- a/src/pages/faqs/faqs.scss
+++ b/src/pages/faqs/faqs.scss
@@ -20,10 +20,9 @@
     .log-content {
       margin: 30px auto;
       width: 90%;
-      background-color: #E7EBF0;
-      -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.7);
-  box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.7);
+      background-color: #e7ebf0;
+      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.7);
+      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.7);
     }
-
   }
 }
