--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -104,7 +104,7 @@
         margin: 5px 0;
       }
 
-      .sidebar-item {
+      li, .sidebar-items {
         display: flex;
         align-items: center;
         padding: 10px 20px;
@@ -121,6 +121,7 @@
         }
 
         .collapse__menu {
+          z-index: 999;
           display: flex;
           flex-direction: column;
           padding: 2px 20px;
@@ -128,6 +129,15 @@
           .collapse__sublink {
             color: #999;
             font-size: 14px;
+            cursor: pointer;
+
+            &:hover{
+              color: black;
+            }
+
+            &.active {
+              color: yellow;
+            }
           }
         }
 
@@ -142,6 +152,11 @@
           font-weight: 400;
           color: #888;
           margin-left: 10px;
+        }
+
+        .close {
+          margin-left: 90px;
+          font-size: 16px;
         }
       }
     }
