--- a/src/components/table/list-table.scss
+++ b/src/components/table/list-table.scss
@@ -19,6 +19,10 @@
       color: green;
       background-color: rgba(0, 128, 0, 0.151);
     }
+    &.Processing {
+      color: #aa7af0;
+      background-color: rgba(170, 122, 240, 0.151);
+    }
     &.Pending {
       color: goldenrod;
       background-color: rgba(189, 189, 3, 0.103);
