--- a/src/pages/forums/forums.scss
+++ b/src/pages/forums/forums.scss
@@ -50,14 +50,62 @@
         text-align: justify;
         padding: 20px;
 
-        .report-type {
-          background-color: rgba(220, 20, 60, 0.6);
-          width: fit-content;
-          padding: 5px 15px;
-          border-radius: 8px;
-          color: white;
-          font-size: 9px;
-          margin-left: 5px;
+        .tag-items {
+          display: flex;
+
+          .report-type {
+            width: fit-content;
+            padding: 5px 15px;
+            border-radius: 8px;
+            color: white;
+            font-size: 9px;
+            margin-left: 5px;
+
+            &.inc {
+              color: rgb(255, 140, 0);
+              background-color: rgba(255, 165, 0, 0.151);
+            }
+
+            &.failed {
+              color: crimson;
+              background-color: rgba(255, 0, 0, 0.2);
+            }
+
+            &.rb {
+              color: #aa7af0;
+              background-color: rgba(170, 122, 240, 0.151);
+            }
+
+            &.acs {
+              color: blue;
+              background-color: rgba(95, 158, 160, 0.151);
+            }
+
+            &.curr {
+              color: rgb(255, 0, 255);
+              background-color: rgba(255, 0, 255, 0.151);
+            }
+
+            &.prev {
+              color: lightcoral;
+              background-color: rgba(240, 128, 128, 0.151);
+            }
+
+            &.others {
+              color: rgb(150, 75, 0);
+              background-color: rgba(150, 75, 0, 0.151);
+            }
+
+            &.pending {
+              color: goldenrod;
+              background-color: rgba(189, 189, 3, 0.151);
+            }
+
+            &.completed {
+              color: green;
+              background-color: rgba(0, 128, 0, 0.151);
+            }
+          }
         }
 
         .title {
