--- a/src/components/forums/single/singleF.scss
+++ b/src/components/forums/single/singleF.scss
@@ -113,7 +113,7 @@
             align-items: center;
             justify-content: flex-start;
             flex-direction: row;
-            background: #f7f7f7;
+            box-shadow: rgb(137 61 255 / 14%) 0px 8px 16px 0px;
             margin-top: 30px;
 
             .help-title {
@@ -167,12 +167,12 @@
               height: 100%;
               margin-top: 10px;
 
-              .footer-content {
+              .footer-content-comment {
                 width: 100%;
                 height: 100%;
                 display: flex;
                 flex-wrap: wrap;
-                background-color: #f7f7f7;
+                box-shadow: rgb(137 61 255 / 34%) 0px 8px 16px 0px;
                 margin-bottom: 20px;
 
                 .content-header {
